# AMX

./: .dockerignore  .gitattributes  .gitignore  2026-05-18-consultant-ai-workbench-v1-design.md  2026-05-18-consultant-ai-workbench-v1-implementation.md  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  SECURITY.md  咨询交付 AI 工作台20260518.md  完整的系统升级设计手册.md  详细开发计划.md
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/tests/: __init__.py  conftest.py  test_agent_orchestration_p4.py  test_agent_runtime_production_loop.py  test_agent_workflow_runtime.py  test_alembic_migrations.py  test_alert_jobs.py  test_api_router_contract.py  test_authenticated_smoke_contract.py  test_bootstrap.py  test_capability_activation.py  test_capability_commissioning.py  test_capability_readiness.py  test_change_audit_command_center.py  test_collaboration_review_hub.py  test_collaboration_work_items.py  test_creator_attribution_contracts.py  test_dependency_automation_contract.py  test_document_authoring_contract_matrix.py  test_full_document_delivery_workbench.py  test_gitnexus_deploy_contract.py  test_identity_team_access.py  test_integration_connectivity.py  test_integration_project_sync.py  test_integrations_webhooks.py  test_knowledge_graph_workbench.py  test_llm_gateway.py  test_notification_delivery_ops.py  test_ops_permissions.py  test_ops_quota_status.py  test_ops_readiness_dashboard.py  test_persisted_conflict_scan.py  test_production_mock_contract.py  test_production_ops_command_center.py  test_production_schema_compatibility.py  (+12 more)
(+484 files in other folders)
