[project]
name = "consultant-ai-api"
version = "0.1.0"
description = "Consultant AI Workbench API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.14.2",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<4.3",
    "redis>=5.0.0",
    "arq>=0.25.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.31",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    "greenlet>=3.0.0",
    "boto3>=1.34.0",
    "aiosmtplib>=3.0.0",
    "email-validator>=2.0.0",
    "logfire>=4.0.0",
    "aiosqlite>=0.22.1",
    "pyjwt[crypto]>=2.13.0",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
]
